--- a/demo/input.html
+++ b/demo/input.html
@@ -47,14 +47,59 @@
                 text: '.com'
               }
             ]
+          },
+          {
+            type: 'input',
+            key: 'inputValue',
+            props: {
+              placeholder: '请输入内容...'
+            },
+            children: [
+              {
+                type: 'span',
+                slot: 'append',
+                text: 'com'
+              }
+            ]
+          },
+          {
+            type: 'input',
+            key: 'inputValue',
+            props: {
+              placeholder: '请输入内容...'
+            },
+            children: [
+              {
+                type: 'select',
+                slot: 'prepend',
+                options: []
+              },
+              {
+                type: 'button',
+                slot: 'append',
+                props: {
+                  icon: 'el-icon-search',
+                  type: 'primary'
+                }
+              }
+            ]
+          },
+          {
+            type: 'button', text: 'test', props: { type: 'primary', loading: true }
           }
         ],
         formData: {
           inputValue: ''
         }
       }
+    },
+    watch: {
+      'options.formData.inputValue'(val) {
+        console.log(val)
+      }
     }
   })
+
 </script>
 </body>
 </html>
