--- a/demo/index.html
+++ b/demo/index.html
@@ -14,6 +14,14 @@
             margin: auto;
             margin-top: 40px;
         }
+
+        .el-select .el-input {
+            width: 130px;
+        }
+
+        .input-with-select .el-input-group__prepend {
+            background-color: #fff;
+        }
     </style>
 </head>
 <body>
@@ -40,11 +48,6 @@
                 type: 'span',
                 slot: 'prepend',
                 text: 'http://'
-              },
-              {
-                type: 'span',
-                slot: 'append',
-                text: '.com'
               }
             ]
           },
@@ -65,6 +68,7 @@
           {
             type: 'input',
             key: 'inputValue',
+            class: 'input-with-select',
             props: {
               placeholder: '请输入内容...'
             },
@@ -72,7 +76,11 @@
               {
                 type: 'select',
                 slot: 'prepend',
-                options: []
+                key: 'selectValue',
+                props: {
+                  placeholder: '请选择'
+                },
+                options: [{ label: 'test', value: 1 }, { label: 'test3', value: 2 }]
               },
               {
                 type: 'button',
@@ -85,17 +93,21 @@
             ]
           },
           {
+            type: 'select',
+            key: 'selectValue',
+            props: {
+              placeholder: '请选择'
+            },
+            options: [{ label: 'test', value: 1 }, { label: 'test3', value: 2 }]
+          },
+          {
             type: 'button', text: 'test', props: { type: 'primary', loading: true }
           }
         ],
         formData: {
-          inputValue: ''
+          inputValue: '',
+          selectValue: 1
         }
-      }
-    },
-    watch: {
-      'options.formData.inputValue'(val) {
-        console.log(val)
       }
     }
   })
